--- a/index.html
+++ b/index.html
@@ -30,35 +30,35 @@
 		<div class="mask1">
 			<div class="mask1_con">
 				<div class="mask1_con_title">THUNDEROBOT</div>
-				<div class="mask1_con0 mask1_con1">
+				<div class="mask1_con0 mask1_con1 trans4">
 					<div class="c1">01</div>
 					<div>
 						<div class="c2 trans4">官方视频</div>
 						<div class="c3">Targa官方宣传动画</div>
 					</div>
 				</div>
-				<div class="mask1_con0 mask1_con2">
+				<div class="mask1_con0 mask1_con2 trans4">
 					<div class="c1">02</div>
 					<div>
 						<div class="c2 trans4">吴尊代言</div>
 						<div class="c3">明星代言，品质尊贵</div>
 					</div>
 				</div>
-				<div class="mask1_con0 mask1_con3">
+				<div class="mask1_con0 mask1_con3 trans4">
 					<div class="c1">03</div>
 					<div>
 						<div class="c2 trans4">Targa详情</div>
 						<div class="c3">图文并茂，详情介绍</div>
 					</div>
 				</div>
-				<div class="mask1_con0 mask1_con4">
+				<div class="mask1_con0 mask1_con4 trans4">
 					<div class="c1">04</div>
 					<div>
 						<div class="c2 trans4">畅玩FPS游戏</div>
 						<div class="c3">无卡顿，畅玩主流游戏</div>
 					</div>
 				</div>
-				<div class="mask1_con0 mask1_con5">
+				<div class="mask1_con0 mask1_con5 trans4">
 					<div class="c1">05</div>
 					<div>
 						<div class="c2 trans4">支持者</div>
