--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </div>
 <div class="content content_video">
 	<div class="videocontainer">
-		<video loop autoplay="autoplay"  src="video/video.mp4" type="video/mp4"></video>
+		<video autoplay="autoplay" controls="controls" src="video/video.mp4" type="video/mp4"></video>
 	</div>
 	<div class="words">
 		<span>TJFK LASJIF LA JFKLDJAL KFJILA JLFKD TTIOOOE YU SEOOING</span><br/>
